--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: gestionstocks/azfuncdockerize:latest
+          tags: koueslati/gestionstocks:latest
           
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
